--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,50 @@
 .tmp.driveupload/150724
 .tmp.driveupload/150730
 .tmp.driveupload/150734
+.tmp.driveupload/150436
+.tmp.driveupload/150736
+.tmp.driveupload/150750
+.tmp.driveupload/150754
+.tmp.driveupload/150758
+.tmp.driveupload/150762
+.tmp.driveupload/150770
+.tmp.driveupload/150778
+.tmp.driveupload/153131
+.tmp.driveupload/153135
+.tmp.driveupload/153139
+.tmp.driveupload/153143
+.tmp.driveupload/153145
+.tmp.driveupload/153147
+.tmp.driveupload/153151
+.tmp.driveupload/153155
+.tmp.driveupload/153159
+.tmp.driveupload/153163
+.tmp.driveupload/153167
+.tmp.driveupload/153171
+.tmp.driveupload/153173
+.tmp.driveupload/153177
+.tmp.driveupload/153181
+.tmp.driveupload/153185
+.tmp.driveupload/153187
+.tmp.driveupload/153191
+.tmp.driveupload/153195
+.tmp.driveupload/153197
+.tmp.driveupload/153201
+.tmp.driveupload/153203
+.tmp.driveupload/153205
+.tmp.driveupload/153207
+.tmp.driveupload/153211
+.tmp.driveupload/153213
+.tmp.driveupload/153217
+.tmp.driveupload/153221
+.tmp.driveupload/153225
+.tmp.driveupload/153229
+.tmp.driveupload/153233
+.tmp.driveupload/153237
+.tmp.driveupload/153239
+.tmp.driveupload/153241
+.tmp.driveupload/153243
+.tmp.driveupload/153247
+.tmp.driveupload/153251
+.tmp.driveupload/153255
+.tmp.driveupload/153259
