Minor update to typography

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,20 @@
 .tmp.driveupload/153251
 .tmp.driveupload/153255
 .tmp.driveupload/153259
+.tmp.driveupload/159135
+.tmp.driveupload/159133
+.tmp.driveupload/159129
+.tmp.driveupload/159125
+.tmp.driveupload/159121
+.tmp.driveupload/159117
+.tmp.driveupload/159115
+.tmp.driveupload/159111
+.tmp.driveupload/159107
+.tmp.driveupload/159103
+.tmp.driveupload/159101
+.tmp.driveupload/159097
+.tmp.driveupload/159093
+.tmp.driveupload/159089
+.tmp.driveupload/159085
+.tmp.driveupload/159081
+.tmp.driveupload/159079
