--- a/.gitignore
+++ b/.gitignore
@@ -1,144 +1,1 @@
-
-.tmp.driveupload/150444
-.tmp.driveupload/150448
-.tmp.driveupload/150450
-.tmp.driveupload/150454
-.tmp.driveupload/150458
-.tmp.driveupload/150462
-.tmp.driveupload/150466
-.tmp.driveupload/150470
-.tmp.driveupload/150474
-.tmp.driveupload/150478
-.tmp.driveupload/150482
-.tmp.driveupload/150484
-.tmp.driveupload/150488
-.tmp.driveupload/150492
-.tmp.driveupload/150496
-.tmp.driveupload/150498
-.tmp.driveupload/150502
-.tmp.driveupload/150506
-.tmp.driveupload/150510
-.tmp.driveupload/150514
-.tmp.driveupload/150518
-.tmp.driveupload/150522
-.tmp.driveupload/150526
-.tmp.driveupload/150530
-.tmp.driveupload/150534
-.tmp.driveupload/150538
-.tmp.driveupload/150542
-.tmp.driveupload/150546
-.tmp.driveupload/150550
-.tmp.driveupload/150554
-.tmp.driveupload/150558
-.tmp.driveupload/150560
-.tmp.driveupload/150564
-.tmp.driveupload/150568
-.tmp.driveupload/150572
-.tmp.driveupload/150576
-.tmp.driveupload/150580
-.tmp.driveupload/150584
-.tmp.driveupload/150588
-.tmp.driveupload/150592
-.tmp.driveupload/150596
-.tmp.driveupload/150600
-.tmp.driveupload/150602
-.tmp.driveupload/150606
-.tmp.driveupload/150608
-.tmp.driveupload/150610
-.tmp.driveupload/150614
-.tmp.driveupload/150618
-.tmp.driveupload/150622
-.tmp.driveupload/150624
-.tmp.driveupload/150628
-.tmp.driveupload/150632
-.tmp.driveupload/150636
-.tmp.driveupload/150640
-.tmp.driveupload/150644
-.tmp.driveupload/150648
-.tmp.driveupload/150650
-.tmp.driveupload/150654
-.tmp.driveupload/150656
-.tmp.driveupload/150660
-.tmp.driveupload/150662
-.tmp.driveupload/150666
-.tmp.driveupload/150670
-.tmp.driveupload/150674
-.tmp.driveupload/150678
-.tmp.driveupload/150682
-.tmp.driveupload/150686
-.tmp.driveupload/150690
-.tmp.driveupload/150692
-.tmp.driveupload/150696
-.tmp.driveupload/150700
-.tmp.driveupload/150704
-.tmp.driveupload/150708
-.tmp.driveupload/150712
-.tmp.driveupload/150718
-.tmp.driveupload/150722
-.tmp.driveupload/150724
-.tmp.driveupload/150730
-.tmp.driveupload/150734
-.tmp.driveupload/150436
-.tmp.driveupload/150736
-.tmp.driveupload/150750
-.tmp.driveupload/150754
-.tmp.driveupload/150758
-.tmp.driveupload/150762
-.tmp.driveupload/150770
-.tmp.driveupload/150778
-.tmp.driveupload/153131
-.tmp.driveupload/153135
-.tmp.driveupload/153139
-.tmp.driveupload/153143
-.tmp.driveupload/153145
-.tmp.driveupload/153147
-.tmp.driveupload/153151
-.tmp.driveupload/153155
-.tmp.driveupload/153159
-.tmp.driveupload/153163
-.tmp.driveupload/153167
-.tmp.driveupload/153171
-.tmp.driveupload/153173
-.tmp.driveupload/153177
-.tmp.driveupload/153181
-.tmp.driveupload/153185
-.tmp.driveupload/153187
-.tmp.driveupload/153191
-.tmp.driveupload/153195
-.tmp.driveupload/153197
-.tmp.driveupload/153201
-.tmp.driveupload/153203
-.tmp.driveupload/153205
-.tmp.driveupload/153207
-.tmp.driveupload/153211
-.tmp.driveupload/153213
-.tmp.driveupload/153217
-.tmp.driveupload/153221
-.tmp.driveupload/153225
-.tmp.driveupload/153229
-.tmp.driveupload/153233
-.tmp.driveupload/153237
-.tmp.driveupload/153239
-.tmp.driveupload/153241
-.tmp.driveupload/153243
-.tmp.driveupload/153247
-.tmp.driveupload/153251
-.tmp.driveupload/153255
-.tmp.driveupload/153259
-.tmp.driveupload/159135
-.tmp.driveupload/159133
-.tmp.driveupload/159129
-.tmp.driveupload/159125
-.tmp.driveupload/159121
-.tmp.driveupload/159117
-.tmp.driveupload/159115
-.tmp.driveupload/159111
-.tmp.driveupload/159107
-.tmp.driveupload/159103
-.tmp.driveupload/159101
-.tmp.driveupload/159097
-.tmp.driveupload/159093
-.tmp.driveupload/159089
-.tmp.driveupload/159085
-.tmp.driveupload/159081
-.tmp.driveupload/159079
+.tmp.driveupload/**
